# simplecam

./: CMakeLists.txt  README.md  package.xml
launch/: picamcsi.xml
src/: picamcsi.cpp
